tests/integration/snapshots/integration__conformance__y_object_extreme_numbers.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
{ "min": -1.0e+28, "max": 1.0e+28 }
stdout ---
{
  "min": -1.0e28,
  "max": 1.0e28
}

stderr ---
