tests/integration/snapshots/integration__conformance__y_object_long_strings.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
{"x":[{"id": "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"}], "id": "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"}
stdout ---
{
  "x": [{ "id": "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" }],
  "id": "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
}

stderr ---
